<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/menu_home"
            android:title="@string/fragment_news" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/logo_white"
            android:title="@string/fragment_services" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/menu_calendar"
            android:title="@string/fragment_calendar" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/menu_activities"
            android:title="@string/fragment_activities" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/menu_settings"
            android:title="@string/fragment_settings" />
    </group>

    <item android:title="@string/category_user">
        <menu>
            <item
                android:id="@+id/nav_directory"
                android:icon="@drawable/menu_directory"
                android:title="@string/fragment_directory" />
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/menu_user"
                android:title="@string/fragment_user" />
        </menu>
    </item>

</menu>
