<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/fastAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fastAccess"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fastAccess"
        android:layout_marginTop="15dp"
        android:text="@string/facebook"
        android:textColor="@color/darkGray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebook"
        android:layout_marginTop="15dp"
        android:text="@string/twitter"
        android:textColor="@color/darkGray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sonoeseo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitter"
        android:layout_marginTop="15dp"
        android:text="@string/sonoeseo.com"
        android:textColor="@color/darkGray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sylapse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sonoeseo"
        android:layout_marginTop="15dp"
        android:text="@string/sylapse"
        android:textColor="@color/darkGray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sylapse"
        android:layout_marginTop="25dp"
        android:text="@string/contact"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtContact"
        android:layout_marginTop="15dp"
        android:text="@string/contact"
        android:textColor="@color/darkGray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact"
        android:layout_marginTop="25dp"
        android:text="@string/about"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/legal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAbout"
        android:layout_marginTop="15dp"
        android:text="@string/legalNotice"
        android:textColor="@color/darkGray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/legal"
        android:layout_marginTop="15dp"
        android:text="@string/about"
        android:textColor="@color/darkGray"
        android:textSize="16sp" />

</RelativeLayout>