<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/connect"
            android:textColor="@color/darkGray"
            android:textSize="40sp" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_below="@id/title"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:background="@color/darkGray" />

        <Button
            android:id="@+id/legal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:background="@null"
            android:text="@string/legal"
            android:textColor="@color/darkGrayContent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/legal"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:hint="@string/username"
            android:textColor="@color/darkGray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/darkGray" />

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:background="@color/btnBlue"
            android:padding="5dp"
            android:text="@string/connection"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/connect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/forgot"
            android:textColor="@color/darkGray" />

    </RelativeLayout>

</ScrollView>