<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="5dp"
    app:cardPreventCornerOverlap="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/sort"
                android:textSize="25sp" />

            <RelativeLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="10dp"
                android:padding="20dp">

                <Switch
                    android:id="@+id/switchAscending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:checked="true" />

                <TextView
                    android:id="@+id/lblDate"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@id/switchAscending"
                    android:gravity="center_vertical"
                    android:text="@string/ascendingDates"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/switchCategorized"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/lblDate"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/lblCategory"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_below="@id/lblDate"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_toStartOf="@id/switchCategorized"
                    android:gravity="center_vertical"
                    android:text="@string/categories"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content"
                android:layout_weight="1"
                android:background="@null"
                android:padding="5dp"
                android:text="@string/validate"
                android:textSize="18sp" />

        </RelativeLayout>
    </ScrollView>
</android.support.v7.widget.CardView>