<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/headerContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/avatarContent"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:elevation="10dp"
                android:innerRadius="0dp"
                android:shape="ring"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/avatarContent">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkGray"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/resp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/darkGray"
                    android:textSize="15sp" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/userDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerContent"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/nameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@color/darkGrayContent"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/nameTitle"
                android:gravity="end"
                android:textColor="@color/darkGray"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/phoneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTitle"
                android:layout_marginTop="20dp"
                android:text="@string/phone"
                android:textColor="@color/darkGrayContent"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTitle"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/phoneTitle"
                android:gravity="end"
                android:textColor="@color/darkGray"
                android:textSize="17sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txtTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userDetails"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/team"
            android:textColor="@color/darkGrayContent"
            android:textSize="17sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTeam"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="horizontal" />

        <Button
            android:id="@+id/disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/team"
            android:layout_margin="20dp"
            android:layout_marginTop="40dp"
            android:background="@color/red"
            android:text="@string/disconnect"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>